--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,6 @@
         </main>
       </div>
     </div>
-    <script src="../dist/app.js"></script>
+    <script src="dist/app.js"></script>
   </body>
 </html>
